# dcai

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  README.md  SUBMISSION_TEXTS.md  VIDEO_SCRIPT.md  dca_contracts_output.json  next.config.js  package-lock.json  package.json  vercel.json
Hodloth/: README.md  dcai.abi.json  query_strategy_tokens.command  takeprofit.command
mx-dcai-sc-main/: .gitignore  Cargo.toml  LICENSE  README.md  deployments.json  sc-config.toml
mx-dcai-sc-main/common/constants/: Cargo.toml
mx-dcai-sc-main/common/constants/src/: lib.rs
mx-dcai-sc-main/common/errors/: Cargo.toml
mx-dcai-sc-main/common/errors/src/: lib.rs
mx-dcai-sc-main/common/structs/: Cargo.toml
mx-dcai-sc-main/common/structs/src/: lib.rs
mx-dcai-sc-main/interaction/: build.sh  decode.sh  encode.sh  globals.devnet.sh  globals.mainnet.sh  run.sh  snippets.sh  view.sh
mx-dcai-sc-main/meta/: Cargo.toml
mx-dcai-sc-main/meta/src/: main.rs
mx-dcai-sc-main/output/: lib.abi.json  lib_proxy.rs
mx-dcai-sc-main/src/: admins.rs  bot.rs  lib.rs  pause.rs  setup.rs  strategy.rs
mx-dcai-sc-main/src/xexchange/: mod.rs  pair_module.rs  pair_proxy.rs  router_module.rs  router_proxy.rs  wrapper_module.rs
mx-dcai-sc-main/tests/: dcai_tests.rs
mx-dcai-sc-main/wasm/: Cargo.toml
mx-dcai-sc-main/wasm/src/: lib.rs
public/: robots.txt  sitemap.xml
scripts/: dev-with-ssl.js
src/: initConfig.ts
src/app/: index.tsx  layout.tsx  page.tsx
src/config/: config.devnet.ts  config.mainnet.ts  sharedConfig.ts
src/contracts/: lib.abi.json  parent.abi.json
src/hooks/: index.ts  (+1 more)
(+54 files in other folders)
